--- a/CoffeeApp2/app/src/main/res/layout/fragment_home.xml
+++ b/CoffeeApp2/app/src/main/res/layout/fragment_home.xml
@@ -66,6 +66,7 @@
     <fragment
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="26dp"
         android:layout_below="@id/header"
         tools:layout="@layout/fragment_reward_table"
         android:name="com.hfad.coffeeapp.fragments.RewardTableFragment"
