--- a/CoffeeApp2/app/src/main/res/layout/fragment_my_order.xml
+++ b/CoffeeApp2/app/src/main/res/layout/fragment_my_order.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.MyOrderFragment"
+    tools:context=".fragments.order.MyOrderFragment"
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
@@ -15,6 +15,26 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/header"
         android:text="@string/hello_blank_fragment" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tab_layout_my_order"
+        android:background="@drawable/rectangle_1">
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="On Going"/>
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="History"/>
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/view_pager_my_order"/>
 
 
 </LinearLayout>
